Fixed all routing, updated and fixed bugs in item upload

--- a/client/src/app/tab3/posted-list/posted-list.page.html
+++ b/client/src/app/tab3/posted-list/posted-list.page.html
@@ -11,20 +11,20 @@
       <ion-col>
         <!-- clothing image -->
         <ion-label>
-          <ion-img class="thumb" [src]="item.imageUrl"></ion-img>
+          <ion-img class="thumb" [src]="item.image"></ion-img>
         </ion-label>
       </ion-col>
       <!-- item stats -->
       <ion-col>
         <ion-list>
           <ion-item>
-            <ion-label>Title: {{item.lastUpdated}}</ion-label>
+            <ion-label>Title: {{item.title}}</ion-label>
           </ion-item>
+          <!-- <ion-item>
+            <ion-label>Description: {{item.description}}</ion-label>
+          </ion-item> -->
           <ion-item>
-            <ion-label>Description: {{item.count_worn}}</ion-label>
-          </ion-item>
-          <ion-item>
-            <ion-label>Price: {{item.price}}</ion-label>
+            <ion-label>Price: {{item.pricePosted}}</ion-label>
           </ion-item>
         </ion-list>
       </ion-col>
