--- a/client/src/app/tab5/tab5.page.scss
+++ b/client/src/app/tab5/tab5.page.scss
@@ -8,3 +8,11 @@
   grid-template-rows: 40px 40px 40px 40px;
 }
 
+// .image--background {
+//   background-size: cover;
+//   height: 150px;
+// }
+
+.displayed{
+  height: 170;
+}
