--- a/client/src/global.scss
+++ b/client/src/global.scss
@@ -72,7 +72,13 @@ ion-tab-button#tab-button-tab5 {
   padding-right: 6px;
 }
 
-
+.displayed {
+    // display: block;
+    // margin-left: auto;
+    // margin-right: auto;
+    // max-height: 40px;
+    height: 160px;
+}
 
 // ion-radio {
 //   // margin: 0;
