--- a/client/src/global.scss
+++ b/client/src/global.scss
@@ -62,7 +62,7 @@ ion-tab-button#tab-button-tab5 {
 .test{
   font-size: 14px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  padding-right: 6px;
+  padding-right: 25px;
 }
 
 .tab5Labs{
@@ -78,6 +78,17 @@ ion-tab-button#tab-button-tab5 {
     // margin-right: auto;
     // max-height: 40px;
     height: 160px;
+}
+.images {
+    // display: block;
+    // margin-left: auto;
+    // margin-right: auto;
+    // max-height: 40px;
+    max-height: 33%;
+}
+
+.dateSelector{
+  padding-right: 30px;
 }
 
 // ion-radio {
