images sizes set for tab1, 3, 4 & 5

--- a/client/src/app/tab1/tab1.page.scss
+++ b/client/src/app/tab1/tab1.page.scss
@@ -15,10 +15,8 @@ ion-grid {
     text-align: center;
   }
 
-  .images{
-    max-height: 33% !important;
-    // height: 33%;
-    // max-width: 33%;
+  ion-img{
+    max-height: 33.33% !important;
   }
 //   .col{
 // background: gray;
