--- a/client/src/app/tab3/tab3.page.html
+++ b/client/src/app/tab3/tab3.page.html
@@ -23,11 +23,11 @@
       <ion-col>
         <!-- clothing image -->
         <ion-label>
-          <ion-img class="displayed" [src]="clothing.imageUrl"></ion-img>
+          <ion-img class="tab3Images" [src]="clothing.imageUrl"></ion-img>
         </ion-label>
       </ion-col>
       <!-- clothing stats -->
-      <ion-col col-6 offset-3 text-center>
+      <ion-col offset-3 text-center>
         <ion-list class="mid">
           <ion-radio-group>
             <ion-item>
