--- a/client/src/app/tab4/tab4.page.scss
+++ b/client/src/app/tab4/tab4.page.scss
@@ -2,11 +2,11 @@
   height: 50%;
 }
 
-.displayed {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-}
+// .displayed {
+//     display: block;
+//     margin-left: auto;
+//     margin-right: auto;
+// }
 
 // #catOptions{
 //     text-align: center !important;
