tab2: fab buttons color updated to tertiary/light blue & icons updated to white

--- a/client/src/app/tab2/tab2.page.html
+++ b/client/src/app/tab2/tab2.page.html
@@ -83,13 +83,13 @@
   <ion-fab vertical="bottom" slot="fixed">
     <ion-row>
       <ion-col>
-        <ion-fab-button color="medium" class='button1' (click)="takePicture()">
-          <ion-icon name="camera"></ion-icon>
+        <ion-fab-button color="tertiary" class='button1' (click)="takePicture()">
+          <ion-icon class="customIcons" name="camera"></ion-icon>
         </ion-fab-button>
       </ion-col>
       <ion-col>
-        <ion-fab-button color="medium" class='button2' (click)="upload()">
-          <ion-icon name="cloud"></ion-icon>
+        <ion-fab-button color="tertiary" class='button2' (click)="upload()">
+          <ion-icon class="customIcons" name="cloud"></ion-icon>
         </ion-fab-button>
       </ion-col>
     </ion-row>
