confirm button tab1 font size and family updated

--- a/client/src/app/tab1/tab1.page.html
+++ b/client/src/app/tab1/tab1.page.html
@@ -88,7 +88,7 @@
 
     <ion-row class="ion-align-items-center ion-justify-content-center">
       <ion-col>
-        <ion-button color="tertiary" (click)="presentToast()">{{outfitSelected ? 'Current Outfit' : 'Confirm Outfit'}}
+        <ion-button class="confirmButton" color="tertiary" (click)="presentToast()">{{outfitSelected ? 'Current Outfit' : 'Confirm Outfit'}}
         </ion-button>
         <!-- <ion-button color="secondary" (click)="retrieveOutfit()">
         </ion-button> -->
