--- a/client/src/global.scss
+++ b/client/src/global.scss
@@ -72,6 +72,11 @@ ion-tab-button#tab-button-tab5 {
   padding-right: 6px;
 }
 
+.confirmButton{
+  font-size: 18px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
 .displayed {
     display: block;
     margin-left: auto;
@@ -82,8 +87,7 @@ ion-tab-button#tab-button-tab5 {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    // max-height: 40px;
-    height: 210px;
+    height: 190px;
 }
 
 .dateSelector{
