--- a/client/src/app/tab3/tab3sell/tab3sell.scss
+++ b/client/src/app/tab3/tab3sell/tab3sell.scss
@@ -11,5 +11,17 @@
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 93%
+  width: 93%;
+  padding-left: 6px;
 }
+
+.tab3SellLabs{
+  padding-left: 6px;
+}
+
+.tab3SellButton{
+  padding-top: 10px;
+  padding-right: 6px;
+  font-size: 20px;
+  float: right;
+} 
