--- a/client/src/app/tab5/tab5.page.html
+++ b/client/src/app/tab5/tab5.page.html
@@ -69,17 +69,17 @@
       <ion-col>
         <ion-list>
           <ion-item no-padding>
-            <ion-label>Last Worn: {{clothing.lastUpdated}}</ion-label>
+            <ion-label> <b>Last Worn: </b>{{clothing.lastUpdated}}</ion-label>
           </ion-item>
           <ion-item no-padding>
-            <ion-label>Times Worn: {{clothing.count_worn}}</ion-label>
+            <ion-label> <b>Times Worn: </b>{{clothing.count_worn}}</ion-label>
           </ion-item>
           <ion-item no-padding>
-            <ion-label>Price: ${{clothing.price}}</ion-label>
+            <ion-label> <b>Price: $</b>{{clothing.price}}</ion-label>
           </ion-item>
           <ion-item no-padding>
-            <ion-label>Price per Wear:$
-              {{clothing.count_worn === 0 ? clothing.price : (clothing.price/clothing.count_worn).toFixed(2)}}
+            <ion-label> <b>Price per Wear: $</b>
+            {{clothing.count_worn === 0 ? clothing.price : (clothing.price/clothing.count_worn).toFixed(2)}}
             </ion-label>
           </ion-item>
         </ion-list>
