Changed all hardcoded IP addresses to "auth_config" and fixed rotated image problem

--- a/client/src/app/tab1/tab1.page.html
+++ b/client/src/app/tab1/tab1.page.html
@@ -39,7 +39,8 @@
               You currently have no Accessory in your closet. Go add some!
             </div>
             <div *ngIf="outfit['accessory']" routerLink="/home/tabs/tab4" (click)="changeClothingItem('accessory')">
-              <ion-img class="images" [src]="outfit['accessory'].imageUrl"></ion-img>
+              <div *ngIf="outfit['accessory'].imageUrl[4] === ':'; else elseBlock"><img class="uploadedPhoto" [src]="outfit['accessory'].imageUrl"></div>
+              <ng-template #elseBlock><img class="images" [src]="outfit['accessory'].imageUrl"></ng-template>
             </div>
           </div>
           <ng-template #elseBlock>Loading</ng-template>
@@ -52,7 +53,9 @@
               You currently have no Top in your closet. Go add some!
             </div>
             <div *ngIf="outfit['top']" routerLink="/home/tabs/tab4" (click)="changeClothingItem('top')">
-              <ion-img [src]="outfit['top'].imageUrl"></ion-img>
+              <!-- <ion-img [src]="outfit['top'].imageUrl"></ion-img> -->
+              <div *ngIf="outfit['top'].imageUrl[4] === ':'; else elseBlock"><img class="uploadedPhoto" [src]="outfit['top'].imageUrl"></div>
+              <ng-template #elseBlock><img class="images" [src]="outfit['top'].imageUrl"></ng-template>
             </div>
           </div>
         </ion-item>
@@ -67,7 +70,9 @@
               You currently have no Outerwear in your closet. Go add some!
             </div>
             <div *ngIf="outfit['outerwear']" routerLink="/home/tabs/tab4" (click)="changeClothingItem('outerwear')">
-              <ion-img [src]="outfit['outerwear'].imageUrl"></ion-img>
+              <!-- <ion-img [src]="outfit['outerwear'].imageUrl"></ion-img> -->
+              <div *ngIf="outfit['outerwear'].imageUrl[4] === ':'; else elseBlock"><img class="uploadedPhoto" [src]="outfit['outerwear'].imageUrl"></div>
+              <ng-template #elseBlock><img class="images" [src]="outfit['outerwear'].imageUrl"></ng-template>
             </div>
           </div>
         </ion-item>
@@ -79,7 +84,9 @@
               You currently have no Bottom in your closet. Go add some!
             </div>
             <div *ngIf="outfit['bottom']" routerLink="/home/tabs/tab4" (click)="changeClothingItem('bottom')">
-              <ion-img [src]="outfit['bottom'].imageUrl"></ion-img>
+              <!-- <ion-img [src]="outfit['bottom'].imageUrl"></ion-img> -->
+              <div *ngIf="outfit['bottom'].imageUrl[4] === ':'; else elseBlock"><img class="uploadedPhoto" [src]="outfit['botom'].imageUrl"></div>
+              <ng-template #elseBlock><img class="images" [src]="outfit['bottom'].imageUrl"></ng-template>
             </div>
           </div>
         </ion-item>
@@ -97,7 +104,9 @@
         <ion-item>
           <div *ngIf="!isLoading && outfit['shoes']; else elseBlock" routerLink="/home/tabs/tab4"
             (click)="changeClothingItem('shoes')">
-            <ion-img [src]="outfit['shoes'].imageUrl"></ion-img>
+            <!-- <ion-img [src]="outfit['shoes'].imageUrl"></ion-img> -->
+            <div *ngIf="outfit['shoes'].imageUrl[4] === ':'; else elseBlock"><img class="uploadedPhoto" [src]="outfit['shoes'].imageUrl"></div>
+            <ng-template #elseBlock><img class="images" [src]="outfit['shoes'].imageUrl"></ng-template>
           </div>
         </ion-item>
       </ion-col>
