--- a/client/src/app/tab3/tab3.page.scss
+++ b/client/src/app/tab3/tab3.page.scss
@@ -39,3 +39,10 @@
 .mid{
   vertical-align: middle;
 }
+
+.uploadedPhoto{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  transform: rotate(90deg);
+}
