--- a/client/src/app/tab3/tab3sell/tab3sell.scss
+++ b/client/src/app/tab3/tab3sell/tab3sell.scss
@@ -13,3 +13,10 @@
   margin-right: auto;
   width: 93%
 }
+
+.uploadedPhoto{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  transform: rotate(90deg);
+}
