--- a/client/src/app/tab4/tab4.page.html
+++ b/client/src/app/tab4/tab4.page.html
@@ -30,7 +30,9 @@
       <ion-col id="test" size="6" (click)="presentModal(clothingItem); select(clothingItem); print()"
         *ngFor="let clothingItem of closet">
         <!-- <div class="clothingItem">{{clothingItem.category}}</div> -->
-        <img class="displayed" [src]="clothingItem.imageUrl">
+        <div *ngIf="clothingItem.imageUrl[4] === ':'; else elseBlock"><img class="uploadedPhoto" [src]="clothingItem.imageUrl"></div>
+        <ng-template #elseBlock><img class="displayed" [src]="clothingItem.imageUrl"></ng-template>
+        
       </ion-col>
     </ion-row>
   </ion-grid>
