--- a/client/src/app/tab4/tab4.page.scss
+++ b/client/src/app/tab4/tab4.page.scss
@@ -18,3 +18,10 @@
   padding-left: 0% !important;
   padding-bottom: 0% !important;
 }
+
+.uploadedPhoto{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  transform: rotate(90deg);
+}
