update item / occasion toggling fixed

--- a/client/src/app/tab4/update-item/update-item.page.html
+++ b/client/src/app/tab4/update-item/update-item.page.html
@@ -7,7 +7,10 @@
 <ion-content padding>
 
   <ion-content>
-    <ion-card-title>Attributes</ion-card-title>
+    <!-- <ion-card-title>Attributes</ion-card-title> -->
+    <h2>
+      <b>Attributes</b>
+    </h2>
     <img class="displayed" [src]="selectedItem.imageUrl">
     <div>
       <ion-button #long [color]="this.buttonColors['long']" (click)="attributeItem('1'); toggleNamedColor('long')">Long</ion-button>
@@ -48,19 +51,19 @@
         <ion-select-option [disabled]="chosenColor==false">Orange</ion-select-option>
       </ion-select>
     </ion-item>
-    <h2>Occasion</h2>
+    <h2> <b>Occasion</b> </h2>
     <div>
-      <ion-button [color]="this.buttonColors['casual']" (click)="occasionItem('1', 'casual'); toggleNamedColor('casual')">Casual</ion-button>
-      <ion-button [color]="this.buttonColors['formal']" (click)="occasionItem('2', 'formal'); toggleNamedColor('formal')">Formal</ion-button>
-      <ion-button [color]="this.buttonColors['business']" (click)="occasionItem('3','business'); toggleNamedColor('business')">Business</ion-button>
-      <ion-button [color]="this.buttonColors['goingOut']" (click)="occasionItem('4', 'goingOut'); toggleNamedColor('goingOut')">Going Out</ion-button>
-      <ion-button [color]="this.buttonColors['athletic']" (click)="occasionItem('5', 'athletic'); toggleNamedColor('athletic')">Athletic</ion-button>
+      <ion-button [color]="this.buttonColors['casual']" (click)="occasionItem('1', 'casual')">Casual</ion-button>
+      <ion-button [color]="this.buttonColors['formal']" (click)="occasionItem('2', 'formal')">Formal</ion-button>
+      <ion-button [color]="this.buttonColors['business']" (click)="occasionItem('3','business')">Business</ion-button>
+      <ion-button [color]="this.buttonColors['goingOut']" (click)="occasionItem('4', 'goingOut')">Going Out</ion-button>
+      <ion-button [color]="this.buttonColors['athletic']" (click)="occasionItem('5', 'athletic')">Athletic</ion-button>
     </div>
-    <h2>Category</h2>
+    <h2> <b>Category</b></h2>
     <div *ngFor="let category of selectedCategory" (click)="selectCategory(category)">
       <ion-button [color]="buttonColor" class="category">{{category}}</ion-button>
     </div>
-    <div>- or -</div>
+    <div>  - or -</div>
     <ion-item>
       <ion-label>Select One</ion-label>
       <ion-select multiple="false" cancelText="Cancel" okText="Done" [(ngModel)]="chosenCategory"
@@ -75,7 +78,12 @@
       </ion-select>
     </ion-item>
     <div>
-      <ion-card-title>Price</ion-card-title>
+      <h2>
+        <b>
+          Price
+        </b>
+      </h2>
+      <!-- <ion-card-title>Price</ion-card-title> -->
       <ion-item id="rounded">
         <ion-label fixed>$</ion-label>
         <ion-input type="text" [(ngModel)]="price" value="" placeholder="{{initialprice}}" inputmode="numeric"></ion-input>
