--- a/client/src/app/tab3/posted-list/posted-list.page.html
+++ b/client/src/app/tab3/posted-list/posted-list.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar>
     <ion-back-button></ion-back-button>
-    <ion-title>Currently posted for sale</ion-title>
+    <ion-title>Pending Sales on eBay</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -21,13 +21,13 @@
           <ion-col>
             <ion-list>
               <ion-item>
-                <ion-label>Title: {{item.title}}</ion-label>
+                <ion-label><b>Title: </b>{{item.title}}</ion-label>
               </ion-item>
               <!-- <ion-item>
                 <ion-label>Description: {{item.description}}</ion-label>
               </ion-item> -->
               <ion-item>
-                <ion-label>Price: {{item.pricePosted}}</ion-label>
+                <ion-label><b>Price: $</b>{{item.pricePosted}}</ion-label>
               </ion-item>
             </ion-list>
           </ion-col>
