tab3Sell labels and input font-size updated

--- a/client/src/app/tab3/tab3sell/tab3sell.scss
+++ b/client/src/app/tab3/tab3sell/tab3sell.scss
@@ -13,10 +13,12 @@
   margin-right: auto;
   width: 93%;
   padding-left: 6px;
+  font-size: 18px;
 }
 
 .tab3SellLabs{
   padding-left: 6px;
+  font-weight: bold;
 }
 
 .tab3SellButton{
@@ -25,3 +27,8 @@
   font-size: 20px;
   float: right;
 } 
+
+.light{
+  font-weight: lighter;
+  font-size: 18px;
+}
