login page getStarted & ion title => font size updated

--- a/client/src/app/login/login.page.scss
+++ b/client/src/app/login/login.page.scss
@@ -9,3 +9,7 @@
 ion-content.background{
     --background: url(../../assets/closet-background.jpg) 0 0/100% 100% no-repeat;
 }
+
+.startB{
+  font-size: 20px;
+}
