--- a/client/src/app/login/login.page.html
+++ b/client/src/app/login/login.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar color="tertiary">
-    <ion-title text-center>OPTICLOSET</ion-title>
+    <ion-title class="startB" text-center>OPTICLOSET</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -8,7 +8,7 @@
 
   <ion-row justify-content-center align-items-center style='height: 100%'>
     <div text-center>
-      <ion-button color="tertiary" shape="round" fill="solid" (click)="authService.login()">
+      <ion-button class="startB" color="tertiary" shape="round" fill="solid" (click)="authService.login()">
         Get Started
       </ion-button>
     </div>
