--- a/client/src/app/notifications/notifications.page.html
+++ b/client/src/app/notifications/notifications.page.html
@@ -19,10 +19,10 @@
       <ion-avatar slot="start">
         <img src="https://gravatar.com/avatar/dba6bae8c566f9d4041fb9cd9ada7741?d=identicon&f=y">
       </ion-avatar>
-        <ion-label>{{this.username}}</ion-label>
+        <ion-label>Laura Pena</ion-label>
     </ion-item>
     <ion-item>
-      <ion-text>{{this.location}}</ion-text>
+      <ion-text>New Orleans, LA</ion-text>
     </ion-item>
     <ion-item>
       <ion-text>
@@ -51,6 +51,8 @@
   <ion-button expand="block" (click)="repeatingDaily()">Set up your daily notification</ion-button>
   <ion-button expand="block" (click)="getAll()">See your scheduled notification</ion-button>
   <ion-button expand="block" (click)="cancelNotifications()">Cancel notification</ion-button>
+  <ion-button expand="block">Log Out</ion-button>
+
   <!-- <ion-button expand="block" (click)="printTime()">Get Time</ion-button> -->
   <ion-list>
     <ion-item *ngFor="let n of scheduled">
